ISDB-308 Changes rebase with ui-testbranch for smoketest