@@ -10,20 +10,15 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.ccd.sdk.ConfigBuilderImpl;
 import uk.gov.hmcts.ccd.sdk.api.Event;
 import uk.gov.hmcts.ccd.sdk.api.Permission;
 import uk.gov.hmcts.reform.cosapi.common.AddSystemUpdateRole;
-import uk.gov.hmcts.reform.cosapi.common.config.AppsConfig;
-import uk.gov.hmcts.reform.cosapi.constants.CommonConstants;
 import uk.gov.hmcts.reform.cosapi.edgecase.model.CaseData;
 import uk.gov.hmcts.reform.cosapi.edgecase.model.State;
 import uk.gov.hmcts.reform.cosapi.edgecase.model.UserRole;
-import uk.gov.hmcts.reform.cosapi.util.AppsUtil;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -32,41 +27,26 @@ import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.ccd.sdk.api.Permission.C;
 import static uk.gov.hmcts.ccd.sdk.api.Permission.R;
 import static uk.gov.hmcts.ccd.sdk.api.Permission.U;
+import static uk.gov.hmcts.reform.cosapi.constants.CommonConstants.CREATE_CASE_EVENT_ID;
+import static uk.gov.hmcts.reform.cosapi.edgecase.model.UserRole.CASE_WORKER;
 import static uk.gov.hmcts.reform.cosapi.edgecase.model.UserRole.CITIZEN;
 import static uk.gov.hmcts.reform.cosapi.util.ConfigTestUtil.createCaseDataConfigBuilder;
 import static uk.gov.hmcts.reform.cosapi.util.ConfigTestUtil.getEventsFrom;
-import static uk.gov.hmcts.reform.cosapi.util.TestConstant.CASE_DATA_FGM_ID;
 
 @ExtendWith(SpringExtension.class)
 @SpringBootTest
-@TestPropertySource("classpath:application.yaml")
 @ActiveProfiles("test")
 class CreateCaseEventTest {
-
-    @InjectMocks
-    private CreateCaseEvent createCaseEvent;
 
     @Mock
     private AddSystemUpdateRole addSystemUpdateRole;
 
-    @Mock
-    private AppsConfig appsConfig;
-
-    @Mock
-    private AppsConfig.AppsDetails fgmAppDetail;
+    @InjectMocks
+    private CreateCaseEvent createCaseEvent;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
-        fgmAppDetail = new AppsConfig.AppsDetails();
-        fgmAppDetail.setCaseType(CommonConstants.PRL_CASE_TYPE);
-        fgmAppDetail.setJurisdiction(CommonConstants.PRL_JURISDICTION);
-        fgmAppDetail.setCaseTypeOfApplication(List.of(CASE_DATA_FGM_ID));
-
-        AppsConfig.EventsConfig eventsConfig = new AppsConfig.EventsConfig();
-        eventsConfig.setCreateEvent("citizen-prl-create-dss-application");
-
-        fgmAppDetail.setEventIds(eventsConfig);
 
     }
 
@@ -77,21 +57,21 @@ class CreateCaseEventTest {
         when(addSystemUpdateRole.addIfConfiguredForEnvironment(anyList()))
             .thenReturn(List.of(CITIZEN));
 
-        when(appsConfig.getApps()).thenReturn(Arrays.asList(fgmAppDetail));
+        when(addSystemUpdateRole.isEnvironmentAat())
+            .thenReturn(true);
 
         createCaseEvent.configure(configBuilder);
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getId)
-            .contains(AppsUtil.getExactAppsDetailsByCaseType(appsConfig, CommonConstants.PRL_CASE_TYPE).getEventIds()
-                          .getCreateEvent());
+            .contains(CREATE_CASE_EVENT_ID);
 
         SetMultimap<UserRole, Permission> expectedRolesAndPermissions =
             ImmutableSetMultimap.<UserRole, Permission>builder()
-                .put(CITIZEN, C)
-                .put(CITIZEN, R)
-                .put(CITIZEN, U)
-                .build();
+            .put(CITIZEN, C)
+            .put(CITIZEN, R)
+            .put(CITIZEN, U)
+            .build();
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getGrants)
@@ -103,15 +83,13 @@ class CreateCaseEventTest {
         final ConfigBuilderImpl<CaseData, State, UserRole> configBuilder = createCaseDataConfigBuilder();
 
         when(addSystemUpdateRole.addIfConfiguredForEnvironment(anyList()))
-            .thenReturn(List.of(CITIZEN));
-
-        when(appsConfig.getApps()).thenReturn(Arrays.asList(fgmAppDetail));
+            .thenReturn(List.of(CITIZEN, CASE_WORKER));
 
         createCaseEvent.configure(configBuilder);
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getId)
-            .contains("citizen-prl-create-dss-application");
+            .contains(CREATE_CASE_EVENT_ID);
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getDescription)
@@ -119,10 +97,13 @@ class CreateCaseEventTest {
 
         SetMultimap<UserRole, Permission> expectedRolesAndPermissions =
             ImmutableSetMultimap.<UserRole, Permission>builder()
-                .put(CITIZEN, C)
-                .put(CITIZEN, R)
-                .put(CITIZEN, U)
-                .build();
+            .put(CITIZEN, C)
+            .put(CITIZEN, R)
+            .put(CITIZEN, U)
+            .put(CASE_WORKER, C)
+            .put(CASE_WORKER, R)
+            .put(CASE_WORKER, U)
+            .build();
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getGrants)
